# nessie

./: Cargo.toml  README.md  build.rs  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  main.yml
assets/: manifest.json  sw.js
assets/js/: ini.js  sw.js
src/: app.rs  apu.rs  args.rs  audio.rs  bus.rs  cart.rs  cpu.rs  debug.rs  emu.rs  lib.rs  main.rs  mapper.rs  ppu.rs  settings.rs  ui.rs
src/platform/: mod.rs  native.rs  wasm.rs
