[package]
name = "nessie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.101", default-features = false }
argh = "0.1.14"
bitflags = "2.10.0"
bytesize = "2.3.1"
compile-time = "0.2.0"
cpal = { version = "0.17.1", features = ["wasm-bindgen"] }
eframe = { version = "0.33.3", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11"
] }
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["image"] }
egui_plot = "0.34.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
log = "0.4.29"
modular-bitfield = "0.13.1"
phf = { version = "0.13.1", default-features = false, features = ["macros"] }
rfd = "0.17.2"
ringbuf = "0.4.8"
sha1_smol = "1.0.1"
triple_buffer = "8.1.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
directories = "6.0.0"
env_logger = "0.11.8"
savefile = { version = "0.20.2", features = ["bzip2"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.58"
web-sys = "0.3.85"
web-time = "1.1.0"

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
